[gd_scene load_steps=7 format=3 uid="uid://do3t4tgigdot5"]

[ext_resource type="Script" path="res://Ships/Player/Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bmfm6xctsa6ix" path="res://Resources/Images/Ships/Spaceship1.png" id="2"]
[ext_resource type="PackedScene" uid="uid://cn0ceuihnvt0j" path="res://UI/FCTMgr.tscn" id="3"]
[ext_resource type="Script" path="res://UI/HUD/HealthBar.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://cohmryprj18f5" path="res://VFX/ScreenShake.tscn" id="5"]

[sub_resource type="Gradient" id="5"]
offsets = PackedFloat32Array(0, 0.486667, 0.846667, 1)
colors = PackedColorArray(1, 0.930672, 0.603624, 1, 0.846291, 0.448436, 0.261273, 1, 0, 0, 0, 1, 0, 0, 0, 0)

[node name="PlayerShip" type="Node2D"]

[node name="Ship" type="RigidBody2D" parent="." groups=["PLAYERS"]]
collision_mask = 22
mass = 5.0
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 1
angular_damp = 2.0
script = ExtResource("1")
MAX_HEALTH = 1000
health = 1000

[node name="Sprite2D" type="Sprite2D" parent="Ship"]
z_index = 1
texture = ExtResource("2")

[node name="LW" type="Marker2D" parent="Ship"]
position = Vector2(-9, -11)

[node name="RW" type="Marker2D" parent="Ship"]
position = Vector2(9, -11)

[node name="L" type="Marker2D" parent="Ship"]
position = Vector2(-16, 10)

[node name="RearThruster" type="CPUParticles2D" parent="Ship/L"]
speed_scale = 4.0
local_coords = true
direction = Vector2(0, 1)
spread = 5.0
gravity = Vector2(0, 0)
initial_velocity_min = 4.0
initial_velocity_max = 8.0
color_ramp = SubResource("5")

[node name="FrontThruster" type="CPUParticles2D" parent="Ship/L"]
position = Vector2(0, -10)
speed_scale = 4.0
local_coords = true
direction = Vector2(0, -1)
spread = 5.0
gravity = Vector2(0, 0)
initial_velocity_min = 4.0
initial_velocity_max = 8.0
color_ramp = SubResource("5")

[node name="R" type="Marker2D" parent="Ship"]
position = Vector2(16, 10)

[node name="RearThruster" type="CPUParticles2D" parent="Ship/R"]
emitting = false
speed_scale = 4.0
local_coords = true
direction = Vector2(0, 1)
spread = 5.0
gravity = Vector2(0, 0)
initial_velocity_min = 4.0
initial_velocity_max = 8.0
color_ramp = SubResource("5")

[node name="FrontThruster" type="CPUParticles2D" parent="Ship/R"]
position = Vector2(0, -10)
emitting = false
local_coords = true
direction = Vector2(0, -1)
spread = 5.0
gravity = Vector2(0, 0)
initial_velocity_min = 4.0
initial_velocity_max = 8.0
color_ramp = SubResource("5")

[node name="Camera2D" parent="Ship" instance=ExtResource("5")]

[node name="MainThruster" type="CPUParticles2D" parent="Ship"]
position = Vector2(0, 16)
amount = 32
speed_scale = 4.0
local_coords = true
emission_shape = 2
emission_sphere_radius = 2.0
direction = Vector2(0, 1)
spread = 5.0
gravity = Vector2(0, 0)
initial_velocity_min = 8.0
initial_velocity_max = 16.0
color_ramp = SubResource("5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ship"]
polygon = PackedVector2Array(1, -20, 2, -20, 2, -18, 3, -18, 3, -15, 4, -15, 4, -11, 5, -11, 5, -10, 6, -10, 6, -7, 7, -7, 7, -11, 8, -11, 8, -10, 9, -10, 9, -11, 10, -11, 10, -4, 11, -4, 11, -3, 12, -3, 12, -2, 13, -2, 13, -1, 14, -1, 14, 0, 17, 0, 17, 3, 18, 3, 18, 4, 19, 4, 19, 8, 17, 8, 17, 10, 14, 10, 14, 8, 12, 8, 12, 7, 5, 7, 5, 8, 4, 8, 4, 9, 5, 9, 5, 10, 6, 10, 6, 11, 7, 11, 7, 12, 8, 12, 8, 15, 3, 15, 3, 14, 2, 14, 2, 16, -2, 16, -2, 14, -3, 14, -3, 15, -8, 15, -8, 12, -7, 12, -7, 11, -6, 11, -6, 10, -5, 10, -5, 9, -4, 9, -4, 8, -5, 8, -5, 7, -12, 7, -12, 8, -14, 8, -14, 10, -17, 10, -17, 8, -19, 8, -19, 4, -18, 4, -18, 3, -17, 3, -17, 0, -14, 0, -14, -1, -13, -1, -13, -2, -12, -2, -12, -3, -11, -3, -11, -4, -10, -4, -10, -11, -9, -11, -9, -10, -8, -10, -8, -11, -7, -11, -7, -7, -6, -7, -6, -10, -5, -10, -5, -11, -4, -11, -4, -15, -3, -15, -3, -18, -2, -18, -2, -20, -1, -20, -1, -21, 1, -21)

[node name="FCTMgr" parent="." instance=ExtResource("3")]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Health" type="ColorRect" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 84.0
offset_bottom = 19.0
color = Color(0, 0, 0, 0.627451)
script = ExtResource("4")

[node name="Bar" type="ColorRect" parent="CanvasLayer/Health"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 73.0
offset_bottom = 8.0
color = Color(1, 0.196078, 0.196078, 1)

[connection signal="body_entered" from="Ship" to="Ship" method="_on_Player_body_entered"]
[connection signal="player_stats_changed" from="Ship" to="CanvasLayer/Health" method="_on_Player_player_stats_changed"]
